other page loads wehen clicked on now playing movie

--- a/movieDetail.html
+++ b/movieDetail.html
@@ -84,7 +84,7 @@
                 </div>
 
                 <section class="movie_details">
-                    <div class="movie_details">
+                    <!--<div class="movie_details">
                         <img class="movie_details_poster" src="./resources/movie poster.jpg" alt="">
                         <div class="movie_details_about">
                             <h2 class="movie_details_title">Fantastic Beasts : The Secrets of Dumbledore</h2>
@@ -112,7 +112,7 @@
                                 </svg>Play</button>
                         </div>
 
-                    </div>
+                    </div>-->
                 </section>
 
                 <section class="section_story">
