--- a/movieDetail.html
+++ b/movieDetail.html
@@ -18,6 +18,7 @@
 <body>
     <main class="main">
         <div class=" overlay overlay2"></div>
+        <div class="overlay_side_navabar"></div>
         <div class="sidenav_container" id="sideNavCon">
             <nav class="sidenav">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#ffff"
@@ -49,7 +50,7 @@
                                 class="bi bi-play-fill" viewBox="0 0 16 16">
                                 <path class="path"
                                     d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
-                            </svg> <span class="movie_title title_span">Movies</span></li
+                            </svg> <span class="movie_titlee title_span">Movies</span></li
                             class="movie_details_about_category_ul_li">
                         <li class="movie_details_about_category_ul_li" class="tv_shows">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -69,9 +70,14 @@
                 </div>
             </nav>
         </div>
-        <section class="section_one">
+        <section class="section_one section_one_movieDetail">
             <div class="nav_paremt_conatainer movieDetailnav_paremt_conatainer">
                 <nav class="navContainer movieDetailnavContainer">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" fill="currentColor"
+                        class="hamburger hamburgerphone bi-list" viewBox="0 0 16 16">
+                        <path class="pathh" fill-rule="evenodd"
+                            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                    </svg>
                     <input class="search" type="text" placeholder="Search ">
                     <div class="light_darkmode"></div>
                 </nav>
@@ -121,7 +127,7 @@
 
 
 
-                <section class="Now_playing_movies_container">
+                <section class=" Now_playing_movies_container Now_playing_movies_container_movieDetail">
                     <h4 class="Now_playing_movies_container_title">Now playing movies</h4>
 
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -134,7 +140,7 @@
                         <path fill-rule="evenodd"
                             d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
                     </svg>
-                    <div class="Now_playing_movies_div">
+                    <div class="Now_playing_movies_div Now_playing_movies_div_movieDetail">
                         <!-- <div class="Now_playing_movies">
                             <a href="./movieDetail.html"><img class="poster" src="./resources/movie poster.jpg" alt=""></a> 
                             <p class="movie_title">Fantastic Beasts: The Secrets of Dumbledore</p>
