--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body class="body">
     <main class="main">
         <div class="overlay"></div>
+        <div class="overlay_side_navabar"></div>
         <div class="sidenav_container">
             <nav class="sidenav">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#ffff"
@@ -67,7 +68,13 @@
         </div>
         <section class="section_one">
             <div class="nav_paremt_conatainer">
+
                 <nav class="navContainer">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" fill="currentColor"
+                        class="hamburger hamburgerphone bi-list" viewBox="0 0 16 16">
+                        <path class="pathh" fill-rule="evenodd"
+                            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+                    </svg>
                     <input class="search" type="text" placeholder="Search ">
                     <div class="light_darkmode"></div>
                 </nav>
