--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
         </section>
 
     </main>
+    <div class="attribution">
+        Coded by <a href="https://github.com/immdipu">Dipu Chaurasiya</a>.
+    </div>
     <script src="./scriptl.js"></script>
 </body>
 
