--- a/movieDetail.html
+++ b/movieDetail.html
@@ -154,14 +154,15 @@
                                 <div class="category">Movie</div>
                             </div>  -->
                     </div>
-
-
-
                 </section>
             </section>
         </section>
 
     </main>
+    <div class="attribution">
+        Coded by <a href="https://github.com/immdipu">Dipu Chaurasiya</a>.
+    </div>
+
     <script src="./movieDetails.js"></script>
 </body>
 
