all code formatted

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cinemaa</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;500;600;700&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
-
 
 <body class="body">
     <main class="main">
@@ -36,76 +36,92 @@
                 <div class="menu">
                     <h4 class="menu_title">Menu</h4>
                     <ul class="menu_ul">
-                        <li class="home"> <a class="sidenavlinks" href="./index.html"><svg
-                                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-house-fill" viewBox="0 0 16 16">
+                        <li class="home">
+                            <a class="sidenavlinks" href="./index.html"><svg xmlns="http://www.w3.org/2000/svg"
+                                    width="16" height="16" fill="currentColor" class="bi bi-house-fill"
+                                    viewBox="0 0 16 16">
                                     <path class="path" fill-rule="evenodd"
                                         d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
                                     <path class="path" fill-rule="evenodd"
                                         d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
                                 </svg><span class="Home_title title_span">Home</span></a>
                         </li>
-                        <li class="movie"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16">
+                        <li class="movie">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-play-fill" viewBox="0 0 16 16">
                                 <path class="path"
                                     d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
-                            </svg> <span class="movie_name title_span">Movies</span></li>
+                            </svg>
+                            <span class="movie_name title_span">Movies</span>
+                        </li>
                         <li class="tv_shows">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-tv-fill" viewBox="0 0 16 16">
                                 <path class="path"
                                     d="M2.5 13.5A.5.5 0 0 1 3 13h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zM2 2h12s2 0 2 2v6s0 2-2 2H2s-2 0-2-2V4s0-2 2-2z" />
-                            </svg> <span class="tv_shows_title title_span">TV-shows</span>
+                            </svg>
+                            <span class="tv_shows_title title_span">TV-shows</span>
                         </li>
-                        <li class="settings"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
+                        <li class="settings">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-gear-fill" viewBox="0 0 16 16">
                                 <path class="path"
                                     d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
-                            </svg><span class="settings_title title_span">Settings</span></li>
+                            </svg><span class="settings_title title_span">Settings</span>
+                        </li>
                     </ul>
                 </div>
             </nav>
         </div>
         <section class="section_one">
             <div class="nav_paremt_conatainer">
-
                 <nav class="navContainer">
                     <svg xmlns="http://www.w3.org/2000/svg" width="33" height="33" fill="currentColor"
                         class="hamburger hamburgerphone bi-list" viewBox="0 0 16 16">
                         <path class="pathh" fill-rule="evenodd"
                             d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
                     </svg>
-                    <input class="search" type="text" placeholder="Search ">
+                    <input class="search" type="text" placeholder="Search " />
                     <div class="light_darkmode"></div>
                 </nav>
             </div>
             <section class="section_two">
-                <h3 class="home_header"> Home</h3>
+                <h3 class="home_header">Home</h3>
                 <div class="Home_header_container">
                     <div class="first_box">
-                        <h4 class="about">Discover the movies <br> lighting up the charts in <br> theaters, on
-                            streaming.</h4>
+                        <h4 class="about">
+                            Discover the movies <br />
+                            lighting up the charts in <br />
+                            theaters, on streaming.
+                        </h4>
                         <div class="logo">
-                            <img class="header_logo" src="./resources/logo .jpg" alt="">
+                            <img class="header_logo" src="./resources/logo .jpg" alt="" />
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"
                                 stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
                                 <path d="M20 6L9 17l-5-5"></path>
                             </svg>
                             <div class="quality_about">
                                 <h5 class="free">Yes, It's all free</h5>
-                                <div class="quality ">
-                                    <p> HD Quality</p><span class="dot"></span>
+                                <div class="quality">
+                                    <p>HD Quality</p>
+                                    <span class="dot"></span>
                                     <p>CC</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="second_box">
-                        <h4 class="about">If you like us share <br> our site to your <br> friends.</h4>
+                        <h4 class="about">
+                            If you like us share <br />
+                            our site to your <br />
+                            friends.
+                        </h4>
                     </div>
                 </div>
                 <section class="Now_playing_movies_container">
-                    <h4 class="Now_playing_movies_container_title">Now playing movies</h4>
+                    <h4 class="Now_playing_movies_container_title">
+                        Now playing movies
+                    </h4>
 
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="leftarrow arrowbtn bi-chevron-left" viewBox="0 0 16 16">
@@ -131,13 +147,9 @@
                                 <div class="category">Movie</div>
                             </div>  -->
                     </div>
-
-
-
                 </section>
             </section>
         </section>
-
     </main>
     <div class="attribution">
         Coded by <a href="https://github.com/immdipu">Dipu Chaurasiya</a>.
