--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./resources/D moviesand tv show.png">
     <title>Cinemaa</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -95,7 +96,7 @@
                             theaters, on streaming.
                         </h4>
                         <div class="logo">
-                            <img class="header_logo" src="./resources/logo .jpg" alt="" />
+                            <img class="header_logo" src="./resources/D moviesand tv show.png" alt="" />
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"
                                 stroke-linecap="round" stroke-linejoin="round" class="feather feather-check">
                                 <path d="M20 6L9 17l-5-5"></path>
