--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 
 <body class="body">
     <main class="main">
+        <section class="alertMsg">
+            <h2 class="alertMsg_header">Under Construction</h2>
+            <p class="alertMsg_para">This site is still in development phase so Don't expect everything to work as of
+                now. we will keep
+                updating, stay connetcted Thank You!😊</p>
+            <button class="okaybtn">Okay</button>
+        </section>
         <div class="overlay"></div>
         <div class="overlay_side_navabar"></div>
         <div class="sidenav_container">
