--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                 <div class="Home_header_container">
                     <div class="first_box">
                         <h4 class="about">
-                            Discover the movies <br />
-                            lighting up the charts in <br />
-                            theaters, on streaming.
+                            Discover Movies and <br />
+                            TV show. Enjoy awesome <br />
+                            quality content.
                         </h4>
                         <div class="logo">
                             <img class="header_logo" src="./resources/D moviesand tv show.png" alt="" />
