--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="first_box">
                         <h4 class="about">
                             Discover Movies and <br />
-                            TV show. Enjoy awesome <br />
+                            TV shows. Enjoy awesome <br />
                             quality content.
                         </h4>
                         <div class="logo">
