--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2 class="alertMsg_header">Under Construction</h2>
             <p class="alertMsg_para">This site is still in development phase so Don't expect everything to work as of
                 now. we will keep
-                updating, stay connetcted Thank You!😊</p>
+                updating, stay tuned Thank You!😊</p>
             <button class="okaybtn">Okay</button>
         </section>
         <div class="overlay"></div>
