llight mode bug fixed

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
                     </svg>
                     <input class="search" type="text" placeholder="Search " />
-                    <div class="light_darkmode"></div>
+                    <div class="light_darkmode" data-theme="black"></div>
                 </nav>
             </div>
             <section class="section_two">
