--- a/movieDetail.html
+++ b/movieDetail.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
+<body class="body">
     <main class="main">
         <div class=" overlay overlay2"></div>
         <div class="overlay_side_navabar"></div>
