--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 <body class="body">
     <main class="main">
         <section class="alertMsg">
-            <h2 class="alertMsg_header">Under Construction</h2>
-            <p class="alertMsg_para">This site is still in development phase so Don't expect everything to work as of
-                now. we will keep
-                updating, stay tuned Thank You!😊</p>
+            <h2 class="alertMsg_header">Seach is working now!!</h2>
+            <p class="alertMsg_para">More updates coming soon !!! <br> stay tuned Thank You!😊</p>
             <button class="okaybtn">Okay</button>
         </section>
         <div class="overlay"></div>
@@ -126,9 +124,9 @@
                         </h4>
                     </div>
                 </div>
-                <section class="Now_playing_movies_container">
+                <section class="Now_playing_movies_container" id="nowplaying">
                     <h4 class="Now_playing_movies_container_title">
-                        Now playing movies
+                        Now Playing Movies
                     </h4>
 
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -143,6 +141,66 @@
                     </svg>
                     <div class="Now_playing_movies_div">
                         <!-- <div class="Now_playing_movies">
+                            <a href="./movieDetail.html"><img class="poster" src="./resources/movie poster.jpg" alt=""></a> 
+                            <p class="movie_title">Fantastic Beasts: The Secrets of Dumbledore</p>
+                            <div class="date_rating">
+                                <p class="date">2022</p><span class="dot dot2"></span>
+                                <p class="rating">6.9 <span><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                            height="10" fill="Yellow" class="star bi-star-fill" viewBox="0 0 16 16">
+                                            <path
+                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                        </svg></span></p>
+                                <div class="category">Movie</div>
+                            </div>  -->
+                    </div>
+                </section>
+                <section class="Now_playing_movies_container" id="Trendingmovies">
+                    <h4 class="Now_playing_movies_container_title">
+                        Trending Movies
+                    </h4>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="leftarrow arrowbtn bi-chevron-left" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="rightarrow rightarrowindex arrowbtn bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                    <div class="current_popular_movies_div">
+                        <!-- <div class="current_popular_movies">
+                            <a href="./movieDetail.html"><img class="poster" src="./resources/movie poster.jpg" alt=""></a> 
+                            <p class="movie_title">Fantastic Beasts: The Secrets of Dumbledore</p>
+                            <div class="date_rating">
+                                <p class="date">2022</p><span class="dot dot2"></span>
+                                <p class="rating">6.9 <span><svg xmlns="http://www.w3.org/2000/svg" width="10"
+                                            height="10" fill="Yellow" class="star bi-star-fill" viewBox="0 0 16 16">
+                                            <path
+                                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                        </svg></span></p>
+                                <div class="category">Movie</div>
+                            </div>  -->
+                    </div>
+                </section>
+                <section class="Now_playing_movies_container" id="toprated">
+                    <h4 class="Now_playing_movies_container_title">
+                        Top Rated Movies
+                    </h4>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="leftarrow arrowbtn bi-chevron-left" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="rightarrow rightarrowindex arrowbtn bi-chevron-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
+                    </svg>
+                    <div class="Top_rated_movies_div">
+                        <!-- <div class="current_popular_movies">
                             <a href="./movieDetail.html"><img class="poster" src="./resources/movie poster.jpg" alt=""></a> 
                             <p class="movie_title">Fantastic Beasts: The Secrets of Dumbledore</p>
                             <div class="date_rating">
