--- a/search.html
+++ b/search.html
@@ -21,7 +21,7 @@
         <div class="overlay_side_navabar"></div>
         <div class="sidenav_container_movieDetail">
             <div class="sidenav_child_container">
-                <nav class="sidenav2">
+                <nav class="sidenav sidenav_2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#ffff"
                         class="arrow_left bi-arrow-left" viewBox="0 0 16 16">
                         <path fill-rule="evenodd"
@@ -36,37 +36,42 @@
                     <div class="menu">
                         <h4 class="menu_title">Menu</h4>
                         <ul class="menu_ul">
-
-                            <li class="movie_details_about_category_ul_li" class="home"> <a class="sidenavlinks"
-                                    href="./index.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                        fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+                            <li class="home">
+                                <a class="sidenavlinks" href="./index.html"><svg xmlns="http://www.w3.org/2000/svg"
+                                        width="22" height="22" fill="currentColor" class="bi bi-house-fill"
+                                        viewBox="0 0 16 16">
                                         <path class="path" fill-rule="evenodd"
                                             d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
                                         <path class="path" fill-rule="evenodd"
                                             d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z" />
                                     </svg><span class="Home_title title_span">Home</span></a>
-                            </li class="movie_details_about_category_ul_li">
-                            <li class="movie_details_about_category_ul_li" class="movie"><svg
-                                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-play-fill" viewBox="0 0 16 16">
-                                    <path class="path"
-                                        d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
-                                </svg> <span class="movie_titlee title_span">Movies</span></li
-                                class="movie_details_about_category_ul_li">
-                            <li class="movie_details_about_category_ul_li" class="tv_shows">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-tv-fill" viewBox="0 0 16 16">
-                                    <path class="path"
-                                        d="M2.5 13.5A.5.5 0 0 1 3 13h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zM2 2h12s2 0 2 2v6s0 2-2 2H2s-2 0-2-2V4s0-2 2-2z" />
-                                </svg> <span class="tv_shows_title title_span">TV-shows</span>
-                            </li class="movie_details_about_category_ul_li">
-                            <li class="movie_details_about_category_ul_li" class="settings"><svg
-                                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-gear-fill" viewBox="0 0 16 16">
-                                    <path class="path"
-                                        d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
-                                </svg><span class="settings_title title_span">Settings</span></li
-                                class="movie_details_about_category_ul_li">
+                            </li>
+                            <li class="movie">
+                                <a class="sidenavlinks" href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                        class="bi bi-play-fill" viewBox="0 0 16 16">
+                                        <path class="path"
+                                            d="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393z" />
+                                    </svg>
+                                    <span class="movie_name title_span">Movies</span></a>
+                            </li>
+                            <li class="tv_shows">
+                                <a class="sidenavlinks" href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                        class="bi bi-tv-fill" viewBox="0 0 16 16">
+                                        <path class="path"
+                                            d="M2.5 13.5A.5.5 0 0 1 3 13h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zM2 2h12s2 0 2 2v6s0 2-2 2H2s-2 0-2-2V4s0-2 2-2z" />
+                                    </svg>
+                                    <span class="tv_shows_title title_span">shows</span></a>
+                            </li>
+                            <li class="settings">
+                                <a class="sidenavlinks" href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
+                                        class="bi bi-gear-fill" viewBox="0 0 16 16">
+                                        <path class="path"
+                                            d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z" />
+                                    </svg><span class="settings_title title_span">Settings</span></a>
+                            </li>
                         </ul>
                     </div>
                 </nav>
